Create working list of campaigns and begin to develope the abillity to manage the use of them

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL=https://api.airtable.com/v0/appRqmnpD3qTn18Cc
-API_KEY=keyEgyPm893dRucZN
-API_TABLE_SUBS=ListOfSubs
-API_TABLE_CAMP=Campaigns
+REACT_APP_API_URL = https://api.airtable.com/v0/appRqmnpD3qTn18Cc
+REACT_APP_API_KEY = keyEgyPm893dRucZN
+REACT_APP_API_TABLE_SUBS = ListOfSubs
+REACT_APP_API_TABLE_CAMP = Campaigns
