--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "7.15.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.41.1"
   },
   "devDependencies": {
